# trace

./: .gitignore  ANOMALY_COPILOT.md  README.md  devpost.md  devpost_ethics.md  package-lock.json  package.json
anomaly/: README.md  __init__.py  condition_registry.py  config.py  evaluator.py  schemas.py  shape_classifier.py
anomaly/layers/: layer_1_hard.py  layer_2_regex.py  layer_3_fingerprinting.py  layer_4_integers.py
anomaly/tests/: test_evaluator.py  test_layer_1_hard.py
backend/: .env.example  README.md  main.py  requirements.txt  seed_calls.py
backend/anomaly/: condition_registry.py  config.py  evaluator.py  schemas.py
backend/anomaly/layers/: layer_4_integers.py  layer_5_statistical.py
backend/migrations/: add_monthly_budget.sql  add_slack_anomaly_level.sql  add_span_tracking.sql  add_step_profiles.sql  add_threshold_overrides.sql  baseline_hardening.sql  create_usage_table.sql  migrate_projects_uuid.sql  trace_backup.sql
backend/routers/: analyze.py  anomalies.py  calls.py  ingest.py  projects.py  traces.py
backend/schemas/: anomaly.py  trace.py
backend/services/: anomaly_service.py  baseline_service.py  fingerprinter.py  slack_service.py  trace_service.py  trend_service.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthForm.tsx  CallsFeed.tsx  ui.tsx
frontend/lib/: supabase.ts
python-sdk/: README.md  pyproject.toml  smoke_test.py
python-sdk/cernova/: __init__.py  langchain.py  tracer.py
python-sdk/traceai/: __init__.py  _cost.py  langchain.py  tracer.py
sample-app/: .env.example  .env.local.example  .gitignore  README.md  chatbot-demo.ts  chatbot.py  chatbot.ts  demo.ts  package-lock.json  package.json  payloads.json  seed.ts  tsconfig.json
sdk/: README.md  package-lock.json  package.json  smoke-test.mjs  tsconfig.json
sdk/src/: context.ts  cost.ts  index.ts  run.ts  tracer.ts  types.ts
(+12 files in other folders)
